<resources>
    <string name="app_name">HOME</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe to the Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="Username">Username</string>
    <string name="e_mail">Email</string>
    <string name="tag">FIND A HOME</string>
    <string name="swipe_right_for_login">Swipe to the Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="please_enter_username_and_password">Please enter user name and password</string>

    <!-- Paste BOTH strings as required -->
    <string name="back4app_app_id">G90mbl2Izwog6wDodvDxkSzFPKPkiPzTR6zAt6Fc</string>
    <string name="back4app_client_key">rKN3dsIyz3zEKWU4DnE8Ctva78zfSMCgx2lpNyRp</string>
    <string name="attomdata_api_key">4e1b1e82223a8cb310559399be217723</string>
    <string name="zipcode_api_key">uc3gcClzm0LzsXCwUWol4YEqQ5ILv8LDz3oa5qFX7HIv5l2F2VWldzhdishuGVu5</string>
    <string name="google_streetview_key">AIzaSyCNoCggg5iJ8eNKLkxxPYonbIWM-xJin7E</string>

    <string-array name="NoOfBedrooms">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="PropertyType">
        <item>APARTMENT</item>
        <item>CONDOMINIUM</item>
        <item>TOWNHOUSE/ROWHOUSE</item>
        <item>DUPLEX</item>
        <item>RESIDENTIAL ACREAGE</item>
    </string-array>

</resources>
