<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginFragment">

    <TextView
        android:id="@+id/mtvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/mtvSubtitle"
        android:layout_marginStart="123dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="147dp"
        android:text="@string/app_name"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mtvSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/metEmail"
        android:layout_marginStart="136dp"
        android:layout_marginEnd="165dp"
        android:text="@string/tag"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mtvTitle" />

    <EditText
        android:id="@+id/metEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@id/metPassword"
        android:layout_marginTop="79dp"
        android:background="@drawable/et_custom"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mtvSubtitle" />

    <EditText
        android:id="@+id/metPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/et_custom"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/metEmail" />

    <Button
        android:id="@+id/mbtnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/metPassword"
        android:layout_marginTop="19dp"
        android:background="@drawable/btn_custom"
        android:text="@string/login"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/metPassword" />

    <ImageView
        android:id="@+id/mivArrow"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_above="@id/mtvSwipeRight"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="207dp"
        android:layout_marginBottom="309dp"
        android:src="@drawable/ic_arrow_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mtvSwipeRight"
        app:layout_constraintTop_toBottomOf="@+id/mbtnLogin" />

    <TextView
        android:id="@+id/mtvSwipeRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/swipe_left_for_register"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/mivArrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mbtnLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>