<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginFragment">

    <TextView
        android:id="@+id/TitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/SubtitleTextView"
        android:layout_marginStart="123dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="147dp"
        android:text="@string/app_name"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/SubtitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/EmailEditText"
        android:layout_marginStart="136dp"
        android:layout_marginEnd="165dp"
        android:text="@string/tag"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TitleTextView" />

    <EditText
        android:id="@+id/EmailEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@id/PassEditText"
        android:layout_marginTop="79dp"
        android:background="@drawable/et_custom"
        android:hint="@string/Username"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SubtitleTextView" />

    <EditText
        android:id="@+id/PassEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/et_custom"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EmailEditText" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/PassEditText"
        android:layout_marginTop="19dp"
        android:background="@drawable/btn_custom"
        android:text="@string/login"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PassEditText" />

    <ImageView
        android:id="@+id/ArrowImageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_above="@id/SwipeRightTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="207dp"
        android:layout_marginBottom="309dp"
        android:src="@drawable/ic_arrow_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/SwipeRightTextView"
        app:layout_constraintTop_toBottomOf="@+id/LoginButton"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/SwipeRightTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/swipe_left_for_register"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/ArrowImageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginButton" />

</androidx.constraintlayout.widget.ConstraintLayout>